updating my website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caladea|Dosis&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -48,7 +49,9 @@
     <section class="about" id="about">
             <div class="container">
                 <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+                    <div class="color-overlay">
                     <img src="images/me.jpeg" alt="">
+                </div>  
                 </div>
                 <div class="about-details" data-aos="fade-left" data-aos-delay="800">
                     <div class="about-heading">
@@ -236,7 +239,8 @@
     </section>
     <footer class="copyright">
         <div class="up" id="up">
-            <i class="fas fa-chevron-up"></i>
+            <!-- <i class="fas fa-chevron-up"></i> -->
+            <i class="stephen">S</i>
             <span></span>
             <span></span>
             <span></span>
