new change updating my website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </ul>
         </nav>
         <div class="landing-text">
-            <h1>Stephen B</h1>
+            <h2>Hi, my name is</h2>
+            <h1>Stephen Belisario</h1>
             <h6 id="demo"></h6>
         </div>
     </header>
@@ -145,7 +146,7 @@
                             Constructed the project from scratch using Pyhton, Django.
                             Its a School for Coding which you can learn all the Language's that will boost your career!
                         </p>
-                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta">View Details</a>
+                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta">GitHub</a>
                     </div>
                 </div>
                 <div class="portfolio-item" >
@@ -155,8 +156,8 @@
                                 <p>
                                     Expense Tracker is a web app that tracks all your expenses with a beutiful design that make your eyes pop! 
                                 </p>
-                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta">View Details</a>
-                            </div>
+                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta">GitHub</a>
+                        </div>
                     <div class="portfolio-img " data-aos="fade-left" data-aos-delay="1200">
                         <img src="images/expensenoBackground.png" alt="">
                     </div>
@@ -172,7 +173,7 @@
                         <p>
                             This will be my 3rd project will be coming soon!!
                         </p>
-                        <a href="#" class="cta">View Details</a>
+                        <a href="#" class="cta">GitHub</a>
                     </div>
                 </div>
             </div>
