updating my website

--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
         <nav class="top-nav">
             <ul class="nav-list">
                 <li>
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link"><span>01.</span>Home</a>
                 </li>
                 <li>
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="#about" class="nav-link"><span>02.</span>About</a>
                 </li>
                 <li>
-                    <a href="images/Resume.pdf" class="nav-link">Resume</a>
+                    <a href="images/Resume.pdf" class="nav-link"><span>03.</span>Resume</a>
                 </li>
                 <li>
-                    <a href="#portfolio" class="nav-link">Portfolio</a>
+                    <a href="#portfolio" class="nav-link"><span>04.</span>Portfolio</a>
                 </li>
                 <li>
-                    <a href="#experience" class="nav-link">Experience</a>
+                    <a href="#experience" class="nav-link"><span>05.</span>Experience</a>
                 </li>
                 <li>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link"><span>06.</span>Contact</a>
                 </li>
             </ul>
         </nav>
-        <div class="landing-text">
-            <h2>Hi, my name is</h2>
-            <h1>Stephen Belisario</h1>
+        <div class="landing-text ">
+            <h2 data-aos="fade-right">Hi, my name is</h2>
+            <h1 data-aos="fade-left">Stephen Belisario</h1>
             <h6 id="demo"></h6>
         </div>
     </header>
@@ -50,9 +50,7 @@
     <section class="about" id="about">
             <div class="container">
                 <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                    <div class="color-overlay">
-                    <img src="images/me.jpeg" alt="">
-                </div>  
+                    <img class="me" src="images/me.png" alt="">
                 </div>
                 <div class="about-details" data-aos="fade-left" data-aos-delay="800">
                     <div class="about-heading">
@@ -163,7 +161,7 @@
                     </div>
                     
                 </div>
-                <div class="portfolio-item">
+                <!-- <div class="portfolio-item">
                     <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="1500">
                         <img src="images/portitem3.jpeg" alt="">
                     </div>
@@ -175,7 +173,7 @@
                         </p>
                         <a href="#" class="cta">GitHub</a>
                     </div>
-                </div>
+                </div> -->
             </div>
     </section>
 
@@ -212,7 +210,7 @@
             
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
             <div class="container">
                 <div class="section-heading">
                     <h1>Contact</h1>
