updated my website

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <ul   id="nav-lists" data-aos="fade-down" data-aos-delay="300">
 
                 <li>
-                    <a href="#about" class="nav-link"><span class="span">01.</span>About</a>
+                    <a href="#about" class="nav-link"><span class="number">01.</span>About</a>
                 </li>
                 <li>
-                    <a href="#contact" class="nav-link"><span>02.</span>Contact</a>
+                    <a href="#contact" class="nav-link"><span class="number">02.</span>Contact</a>
                 </li>
                 <li>
-                    <a href="#portfolio" class="nav-link"><span>03.</span>Portfolio</a>
+                    <a href="#portfolio" class="nav-link"><span class="number">03.</span>Portfolio</a>
                 </li>
                 <li>
-                    <a href="#experience" class="nav-link"><span>04.</span>Experience</a>
+                    <a href="#experience" class="nav-link"><span class="number">04.</span>Experience</a>
                 </li>
                 <li></li>
-                    <a href="images/newResume.pdf" class="nav-link">Resume</a>
+                    <a href="images/newResume.pdf" class="nav-link"><span class="number"">05.</span>Resume</a>
                 </li>
             </ul>
             <div class="burger">
@@ -57,7 +57,7 @@
         </div>
         <div class="side"  >
             <div class="email-wrapper">
-                <a href="mailto:bazegie_07@yahoo.com" class="email" data-aos="fade-right">bazegie_07@yahoo.com</a>
+                <a href="mailto:bazegie_07@yahoo.com" class="email" data-aos="fade-right" data-aos-delay="600">bazegie_07@yahoo.com</a>
             </div>
         </div>
         </nav>
@@ -65,7 +65,14 @@
         <div class="landing-text ">
             <h2 data-aos="fade-right" data-aos-delay="300">Hi, my name is</h2>
             <h1 data-aos="fade-left" data-aos-delay="300">Stephen Belisario</h1>
-            <h6 id="demo"></h6>
+            <h6 data-aos="fade-right" data-aos-delay="300">Web Developer & Photographer</h6>
+            <a href="mailto:bazegie_07@yahoo.com" id="resume" data-aos="fade-up" data-aos-delay="600">
+                <span id="resumespan"></span>
+                <span id="resumespan"></span>
+                <span id="resumespan"></span>
+                <span id="resumespan"></span>
+                Get In Touch
+            </a>
         </div>
     </header>
 
