--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="wow.min.js"></script>
     
 
 
@@ -78,9 +79,9 @@
     <section class="about" id="about">
             <div class="container">
                 <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                    <img src="images/me.png" class="me ione" alt="">
+                    <img src="images/me.png" class="me ione pub2" alt="">
                 </div>
-                <div class="about-details" data-aos="fade-left" data-aos-delay="800">
+                <div class="about-details"data-aos="fade-down" >
                     <div class="about-heading">
                         <h1>About</h1>
                         <h6>Myself</h6>
@@ -92,9 +93,19 @@
                             Inventory Management, and Adobe Photoshop. Strong arts and design professional who 
                             graduated from Coding Dojo. 
                     </p>
-                    <div class="social-media" data-aos="fade-left" data-aos-delay="400">
+                    <div class="social-media" >
                         <ul class="nav-list">
-                            <li>
+                                <a href="https://www.linkedin.com/in/stephen-belisario-61a686bb/">
+                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="1000">li</li>
+                                </a>
+                                <a href="https://www.instagram.com/bazegie07/">
+                                    <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="1200">ig</li>
+                                </a>
+                                <a href="https://github.com/bazegie07">
+                                    <li id="gh" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="1300">gh</li>
+                                </a>    
+                                <!-- <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li> -->
+                            <!-- <li>
                                 <a href="https://github.com/bazegie07" class="icon-link">
                                     <i class="fab fa-github-square"></i>
                                 </a>
@@ -108,7 +119,7 @@
                                 <a href="https://www.linkedin.com/in/stephen-belisario-61a686bb/" class="icon-link">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -172,7 +183,7 @@
                             Constructed the project from scratch using Pyhton, Django.
                             Its a School for Coding which you can learn all the Language's that will boost your career!
                         </p>
-                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta">.GitHub</a>
+                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta" id='gh'>GitHub</a>
                     </div>
                 </div>
                 <div class="portfolio-item" >
@@ -182,7 +193,7 @@
                                 <p>
                                     Expense Tracker is a web app that tracks all your expenses with a beutiful design that make your eyes pop! 
                                 </p>
-                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta">.GitHub</a>
+                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta" id='gh'>GitHub</a>
                         </div>
                     <div class="portfolio-img " data-aos="fade-left" data-aos-delay="1200">
                         <img src="images/expensenoBackground.png" class="ithree" alt="">
@@ -251,7 +262,7 @@
                         created innovating ways to increase sales.
                     </p>
                     <div class="cta">
-                        <a class="cta1" href="images/newResume.pdf">.Info &rarr;</a>
+                        <a class="cta1" href="https://www.instagram.com/bazegie07/">.Info &rarr;</a>
                     </div>
                 </div>
             </div>
