--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.2.0/dist/simpleParallax.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    <script src="wow.min.js"></script>
+    <link rel="stylesheet" href="normalize.css">
     
 
 
@@ -78,8 +78,15 @@
     
     <section class="about" id="about">
             <div class="container">
-                <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
-                    <img src="images/me.png" class="me ione pub2" alt="">
+                <div class="profile-img grid" data-aos="fade-right" data-aos-delay="300">
+                    <figure class="effect-apollo">
+                        <img src="images/me.png" class="me ione pub2" alt="">
+                        <figcaption>
+                            <!-- <h2>Strong <span>Apollo</span></h2> -->
+                            <p>Web Developer & Photographer</p>
+                            <a href="#">View more</a>
+                        </figcaption>
+                    </figure>
                 </div>
                 <div class="about-details"data-aos="fade-down" >
                     <div class="about-heading">
