--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h1>About</h1>
                         <h6>Myself</h6>
                     </div>
-                    <p data-aos="fade-left" data-aos-delay="500">
+                    <p data-aos="fade-left" data-aos-delay="1000">
                             Hi, I'm Stephen Belisario, Experienced Web Developer, Freelance Photographer with 
                             a demonstrated history of working in the photography industry. 
                             Skilled in Python, MEARN, HTML,CSS Management, 
@@ -103,13 +103,13 @@
                     <div class="social-media" >
                         <ul class="nav-list">
                                 <a href="https://www.linkedin.com/in/stephen-belisario-61a686bb/">
-                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="1000">li</li>
+                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2000">li</li>
                                 </a>
                                 <a href="https://www.instagram.com/bazegie07/">
-                                    <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="1200">ig</li>
+                                    <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="2200">ig</li>
                                 </a>
                                 <a href="https://github.com/bazegie07">
-                                    <li id="gh" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="1300">gh</li>
+                                    <li id="gh" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2300">gh</li>
                                 </a>    
                                 <!-- <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li> -->
                             <!-- <li>
@@ -190,7 +190,7 @@
                             Constructed the project from scratch using Pyhton, Django.
                             Its a School for Coding which you can learn all the Language's that will boost your career!
                         </p>
-                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta" id='gh'>GitHub</a>
+                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta" id='gh' data-aos="fade-left" data-aos-delay="2000">GitHub</a>
                     </div>
                 </div>
                 <div class="portfolio-item" >
@@ -200,7 +200,7 @@
                                 <p>
                                     Expense Tracker is a web app that tracks all your expenses with a beutiful design that make your eyes pop! 
                                 </p>
-                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta" id='gh'>GitHub</a>
+                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta" id='gh' data-aos="fade-right" data-aos-delay="2000">GitHub</a>
                         </div>
                     <div class="portfolio-img " data-aos="fade-left" data-aos-delay="1200">
                         <img src="images/expensenoBackground.png" class="ithree" alt="">
