--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                     <div class="social-media" >
                         <ul class="nav-list">
                                 <a href="https://www.linkedin.com/in/stephen-belisario-61a686bb/">
-                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2000">li</li>
+                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2000">linklin</li>
                                 </a>
                                 <a href="https://www.instagram.com/bazegie07/">
-                                    <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="2200">ig</li>
+                                    <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="2200">instagram</li>
                                 </a>
                                 <a href="https://github.com/bazegie07">
-                                    <li id="gh" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2300">gh</li>
+                                    <li id="gh" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2300">github</li>
                                 </a>    
                                 <!-- <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li> -->
                             <!-- <li>
