--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="social-media" >
                         <ul class="nav-list">
                                 <a href="https://www.linkedin.com/in/stephen-belisario-61a686bb/">
-                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2000">linklin</li>
+                                    <li id="fb" class="wow fadeInUp" data-aos="fade-up" data-aos-delay="2000">linkedin</li>
                                 </a>
                                 <a href="https://www.instagram.com/bazegie07/">
                                     <li id="ig" class="wow fadeInUp"  data-aos="fade-up" data-aos-delay="2200">instagram</li>
