--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             Constructed the project from scratch using Pyhton, Django.
                             Its a School for Coding which you can learn all the Language's that will boost your career!
                         </p>
-                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta" id='gh' data-aos="fade-left" data-aos-delay="2000">GitHub</a>
+                        <a href="https://github.com/bazegie07/house_of_coding_project" class="cta" id='gh' data-aos="fade-up" data-aos-delay="2000">git</a>
                     </div>
                 </div>
                 <div class="portfolio-item" >
@@ -200,7 +200,8 @@
                                 <p>
                                     Expense Tracker is a web app that tracks all your expenses with a beutiful design that make your eyes pop! 
                                 </p>
-                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta" id='gh' data-aos="fade-right" data-aos-delay="2000">GitHub</a>
+                                <a href="https://github.com/bazegie07/Expense_Tracker_react.v1.git" class="cta" id='gh' data-aos="fade-up" data-aos-delay="2000">git</a>
+                                <a href="https://tracker-expense.herokuapp.com/" class="cta" id='gh' data-aos="fade-up" data-aos-delay="2500">view</a>
                         </div>
                     <div class="portfolio-img " data-aos="fade-left" data-aos-delay="1200">
                         <img src="images/expensenoBackground.png" class="ithree" alt="">
