--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="container">
                 <div class="section-heading">
                     <h1>Contact</h1>
-                    <h6>Let's Work Together</h6>
+                    <!-- <h6>Let's Work Together</h6> -->
                 </div>
                 
                 <form name="contanct" netlify data-aos="fade-up" data-aos-delay="300">
