--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 </head>
 <body >
+        <script type="text/javascript" src="https://apiv2.popupsmart.com/api/Bundle/355812" async> </script>
 
                                 <!-- this is for the loading section -->
 
